--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -187,12 +187,12 @@
                         <label>Linear spectrogram</label>
                     </div>
                 </div>
-                <!-- <div class="pretty p-default p-round">
-                    <input type="radio" name="radio3" value="MFCC12_0_D_A_Z.conf">
+                <div class="pretty p-default p-round">
+                    <input type="radio" name="radio3" value="Multitaper">
                     <div class="state">
-                        <label>MFCC (normalized by mean)</label>
+                        <label>Multitaper spectrogram</label>
                     </div>
-                </div> -->
+                </div>
                 <!-- <div class="pretty p-default p-round">
                     <input type="radio" name="radio3" value="PLP.conf">
                     <div class="state">
