Provide multitaper and rasta-plp as input features

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -188,18 +188,18 @@
                     </div>
                 </div>
                 <div class="pretty p-default p-round">
-                    <input type="radio" name="radio3" value="Multitaper">
+                    <input type="radio" name="radio3" value="multitaper">
                     <div class="state">
                         <label>Multitaper spectrogram</label>
                     </div>
                 </div>
-                <!-- <div class="pretty p-default p-round">
-                    <input type="radio" name="radio3" value="PLP.conf">
+                <div class="pretty p-default p-round">
+                    <input type="radio" name="radio3" value="rastaplp">
                     <div class="state">
-                        <label>PLP</label>
+                        <label>Rasta PLP</label>
                     </div>
                 </div>
-                <div class="pretty p-default p-round">
+                <!-- <div class="pretty p-default p-round">
                     <input type="radio" name="radio3" value="PLPZ.conf">
                     <div class="state">
                         <label>PLPz</label>
